@@ -1,11 +1,13 @@
 package org.clever.core.http;
 
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.StringUtils;
 
-import javax.servlet.http.HttpServletRequest;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 
 /**
@@ -84,10 +86,27 @@ public class HttpServletRequestUtils {
     }
 
     /**
+     * 获取请求地址：request.getRequestURI() - request.getContextPath()
+     *
+     * @param request 请求对象
+     */
+    public static String getPathWithoutContextPath(HttpServletRequest request) {
+        String contextPath = StringUtils.trim(request.getContextPath());
+        String requestURI = request.getRequestURI();
+        if (StringUtils.isBlank(contextPath) || Objects.equals(contextPath, "/")) {
+            return requestURI;
+        }
+        if (StringUtils.startsWith(requestURI, contextPath)) {
+            return requestURI.substring(contextPath.length());
+        }
+        return requestURI;
+    }
+
+    /**
      * 字符串数组输出
      */
     private static String arrayToString(String[] array) {
-        if (array == null || array.length <= 0) {
+        if (array == null || array.length == 0) {
             return "";
         }
         if (array.length == 1) {
@@ -129,7 +148,7 @@ public class HttpServletRequestUtils {
             }
         }
         String result = paramStr.toString();
-        result = URLDecoder.decode(result, "UTF-8");
+        result = URLDecoder.decode(result, StandardCharsets.UTF_8);
         return result;
     }
 
