@@ -1,39 +1,38 @@
 package org.clever.web.filter;
 
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
-import org.clever.boot.context.properties.bind.Binder;
 import org.clever.core.AppContextHolder;
+import org.clever.core.Assert;
 import org.clever.core.BannerUtils;
-import org.clever.core.env.Environment;
-import org.clever.core.io.Resource;
-import org.clever.core.io.support.ResourceRegion;
-import org.clever.util.Assert;
-import org.clever.util.MimeTypeUtils;
-import org.clever.util.StreamUtils;
 import org.clever.web.FilterRegistrar;
 import org.clever.web.config.StaticResourceConfig;
 import org.clever.web.exception.GenericHttpException;
-import org.clever.web.http.HttpHeaders;
-import org.clever.web.http.HttpRange;
-import org.clever.web.http.HttpStatus;
-import org.clever.web.http.MediaType;
-import org.clever.web.support.resource.StaticResourceHandler;
+import org.clever.web.support.StaticResourceHandler;
+import org.clever.web.utils.WebUtils;
+import org.springframework.boot.context.properties.bind.Binder;
+import org.springframework.core.env.Environment;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.support.ResourceRegion;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpRange;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.util.MimeTypeUtils;
+import org.springframework.util.StreamUtils;
 
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
- * 静态资源的访问Filter，参考Spring {@code ResourceHttpRequestHandler}
+ * 静态资源的访问Filter，参考Spring {@link org.springframework.web.servlet.resource.ResourceHttpRequestHandler}
  * <p>
  * 作者：lizw <br/>
  * 创建时间：2022/12/22 22:00 <br/>
@@ -42,18 +41,19 @@ import java.util.stream.Collectors;
 @Slf4j
 public class StaticResourceFilter implements FilterRegistrar.FilterFuc {
     public static StaticResourceFilter create(String rootPath, StaticResourceConfig staticResourceConfig) {
+        Assert.isNotBlank(rootPath, "参数 rootPath 不能为空");
         Assert.notNull(staticResourceConfig, "参数 staticResourceConfig 不能为 null");
-        return new StaticResourceFilter(staticResourceConfig.isEnable(), createHandler(rootPath, staticResourceConfig.getMappings()));
+        return new StaticResourceFilter(rootPath, staticResourceConfig);
     }
 
     public static StaticResourceFilter create(String rootPath, Environment environment) {
         StaticResourceConfig staticResourceConfig = Binder.get(environment).bind(StaticResourceConfig.PREFIX, StaticResourceConfig.class).orElseGet(StaticResourceConfig::new);
         AppContextHolder.registerBean("staticResourceConfig", staticResourceConfig, true);
         List<StaticResourceHandler> handlers = createHandler(rootPath, staticResourceConfig.getMappings());
-        int maxLength = handlers.stream().map(StaticResourceHandler::getHostedPath).max(Comparator.comparingInt(String::length)).orElse("").length();
+        int maxLength = handlers.stream().map(StaticResourceHandler::getHostedPath).max(Comparator.comparingInt(String::length)).orElse("").length() + 6;
         List<String> logs = new ArrayList<>();
-        logs.add(StringUtils.rightPad("enable", maxLength) + ": " + staticResourceConfig.isEnable());
-        logs.addAll(handlers.stream().map(handler -> StringUtils.rightPad(handler.getHostedPath(), maxLength) + ": " + handler.getLocationAbsPath()).collect(Collectors.toList()));
+        logs.add(org.apache.commons.lang3.StringUtils.rightPad("enable", maxLength) + ": " + staticResourceConfig.isEnable());
+        logs.addAll(handlers.stream().map(handler -> org.apache.commons.lang3.StringUtils.rightPad(handler.getHostedPath(), maxLength) + ": " + handler.getLocationAbsPath()).toList());
         if (staticResourceConfig.isEnable()) {
             BannerUtils.printConfig(log, "StaticResource配置", logs.toArray(new String[0]));
         }
@@ -70,23 +70,25 @@ public class StaticResourceFilter implements FilterRegistrar.FilterFuc {
         return handlers;
     }
 
-    public static final Set<String> SUPPORTED_METHODS = new HashSet<String>() {{
+    public static final Set<String> SUPPORTED_METHODS = new HashSet<>() {{
         add("GET");
         add("HEAD");
     }};
 
-    private final boolean enable;
+    private final StaticResourceConfig staticResourceConfig;
     private final List<StaticResourceHandler> staticResourceHandlers;
 
-    public StaticResourceFilter(boolean enable, List<StaticResourceHandler> staticResourceHandlers) {
-        this.enable = enable;
-        this.staticResourceHandlers = staticResourceHandlers;
+    public StaticResourceFilter(String rootPath, StaticResourceConfig staticResourceConfig) {
+        Assert.isNotBlank(rootPath, "参数 rootPath 不能为空");
+        Assert.notNull(staticResourceConfig, "参数 staticResourceConfig 不能为 null");
+        this.staticResourceConfig = staticResourceConfig;
+        this.staticResourceHandlers = createHandler(rootPath, staticResourceConfig.getMappings());
     }
 
     @Override
     public void doFilter(FilterRegistrar.Context ctx) throws IOException, ServletException {
         // 是否启用
-        if (!enable) {
+        if (!staticResourceConfig.isEnable()) {
             ctx.next();
             return;
         }
@@ -122,7 +124,7 @@ public class StaticResourceFilter implements FilterRegistrar.FilterFuc {
             write(ctx.res, resource);
         } else {
             try {
-                List<HttpRange> httpRanges = HttpHeaders.create(ctx.req).getRange();
+                List<HttpRange> httpRanges = WebUtils.createHttpHeaders(ctx.req).getRange();
                 ctx.res.setStatus(HttpServletResponse.SC_PARTIAL_CONTENT);
                 List<ResourceRegion> resourceRegions = HttpRange.toResourceRegions(httpRanges, resource);
                 if (resourceRegions.size() == 1) {
@@ -143,7 +145,7 @@ public class StaticResourceFilter implements FilterRegistrar.FilterFuc {
         if (!SUPPORTED_METHODS.contains(method.toUpperCase())) {
             throw new GenericHttpException(
                 HttpStatus.METHOD_NOT_ALLOWED.value(),
-                "Method Not Allowed, Allowed Methods: " + StringUtils.join(SUPPORTED_METHODS, ", ")
+                "Method Not Allowed, Allowed Methods: " + org.apache.commons.lang3.StringUtils.join(SUPPORTED_METHODS, ", ")
             );
         }
     }
@@ -178,7 +180,7 @@ public class StaticResourceFilter implements FilterRegistrar.FilterFuc {
 
     private void writeResourceRegions(HttpServletResponse response, Collection<ResourceRegion> resourceRegions) throws IOException {
         Assert.notNull(resourceRegions, "Collection of ResourceRegion should not be null");
-        MediaType contentType = MediaType.tryParseMediaType(response.getContentType());
+        MediaType contentType = tryParseMediaType(response.getContentType());
         String boundaryString = MimeTypeUtils.generateMultipartBoundaryString();
         response.setHeader(HttpHeaders.CONTENT_TYPE, "multipart/byteranges; boundary=" + boundaryString);
         OutputStream out = response.getOutputStream();
@@ -236,5 +238,19 @@ public class StaticResourceFilter implements FilterRegistrar.FilterFuc {
 
     private static void print(OutputStream os, String buf) throws IOException {
         os.write(buf.getBytes(StandardCharsets.US_ASCII));
+    }
+
+    /**
+     * 尝试将给定的字符串解析为单个 {@code MediaType}，解析失败返回 null
+     */
+    private static MediaType tryParseMediaType(String mediaType) {
+        if (org.apache.commons.lang3.StringUtils.isBlank(mediaType)) {
+            return null;
+        }
+        try {
+            return MediaType.parseMediaType(mediaType);
+        } catch (Exception e) {
+            return null;
+        }
     }
 }
